[package]
name = "dora-drives-node"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-message = { path = "../dora/message" }
dora-metrics = { path = "../dora/metrics" }
dora-tracing = { path = "../dora/tracing" }
dora-python-binding = { path = "../dora/api/python/binding" }
dora-node-api = { path = "../dora/api/rust/node" }
opentelemetry = { version = "0.17", features = ["rt-tokio", "metrics"] }
opentelemetry-system-metrics = "0.1.1"
capnp = "0.14.6"
tokio = { version = "1.17.0", features = ["full"] }
eyre = "0.6.7"
futures = "0.3.21"
